outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-7666360085266374589_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric calculated as the harmonic mean of distances to remaining nodes to better capture centrality, and a "path momentum" term that considers the direction of travel to avoid sharp turns.}
                                                                                                                                         ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric calculated as the harmonic mean of distances to remaining nodes to better capture centrality, and a "path momentum" term that considers the direction of travel to avoid sharp turns.}
                                                                                                                                         ^
SyntaxError: unterminated string literal (detected at line 1)
